[package]
name = "tokio-sty"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
env_logger = "0.11.8"
futures ={version = "0.3.31",features = ["std","alloc"]}
log = "0.4.27"
reqwest = {version = "0.12.15",features = ["json","stream","multipart"]}
serde = {version = "1.0.219",features = ["derive"]}
tokio = { version = "1.0", features = ["rt","macros","rt-multi-thread"] }
